--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
+    <h1 id="main-heading">Tic Tac Toe</h1>
+    <div id="gameboard"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
